--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -58,10 +58,9 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
                             <a href="/feature" class="dropdown-item">Our Feature</a>
-                            <a href="/product" class="dropdown-item">Our Product</a>
                             <a href="/team" class="dropdown-item">Our Team</a>
                             <a href="/testimonial" class="dropdown-item">Testimonial</a>
-                            <a href="/404" class="dropdown-item">404 Page</a>
+                           
                         </div>
                     </div>
                     <a href="contact" class="nav-item nav-link">Contact</a>
@@ -69,7 +68,7 @@
                 <div class="d-none d-xl-flex me-3">
                     <div class="d-flex flex-column pe-3 border-end border-primary">
                         <span class="text-body">Call Us On</span>
-                        <a href="tel:+4733378901"><span class="text-primary">Tele: + 251 939 063 697</span></a>
+                        <a href="tel:+4733378901"><span class="text-primary">Tele: +251925235745</span></a>
                     </div>
                 </div>
                 <button class="btn btn-primary btn-md-square d-flex flex-shrink-0 mb-3 mb-lg-0 rounded-circle me-3"
@@ -87,7 +86,7 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+                        <img src="img/water.jpg" class="img-fluid w-100" alt="Image">
                         <div class="carousel-caption-1">
                             <div class="carousel-caption-1-content" style="max-width: 900px;">
                                 <h4 class="text-white text-uppercase fw-bold mb-4 fadeInLeft animated"
@@ -109,7 +108,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/carousel-2.jpg" class="img-fluid w-100" alt="Image">
+                        <img src="img/itwu2.jpeg" class="img-fluid w-100" alt="Image">
                         <div class="carousel-caption-2">
                             <div class="carousel-caption-2-content" style="max-width: 900px;">
                                 <h4 class="text-white text-uppercase fw-bold mb-4 fadeInRight animated"
@@ -299,8 +298,8 @@
                             <a href="#"><i class="fa fa-map-marker-alt me-2"></i> Itang, Gambella, Ethiopia</a>
                             <a href="mailto:info@example.com"><i class="fas fa-envelope me-2"></i> info@itwu.com</a>
                             <a href="mailto:info@example.com"><i class="fas fa-envelope me-2"></i> nhialpal@gmail.com</a>
-                            <a href="tel:+012 345 67890"><i class="fas fa-phone me-2"></i> +251 345 67890</a>
-                            <a href="tel:+012 345 67890" class="mb-3"><i class="fas fa-print me-2"></i> +251 345 67890</a>
+                            <a href="tel:+012 345 67890"><i class="fas fa-phone me-2"></i> +251925235745</a>
+                            <a href="tel:+012 345 67890" class="mb-3"><i class="fas fa-print me-2"></i> +25139063697</a>
                         </div>
                     </div>
                 </div>
