--- a/views/feature.ejs
+++ b/views/feature.ejs
@@ -58,10 +58,9 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
                                 <a href="/feature" class="dropdown-item">Our Feature</a>
-                                <a href="/product" class="dropdown-item">Our Product</a>
                                 <a href="/team" class="dropdown-item">Our Team</a>
                                 <a href="/testimonial" class="dropdown-item">Testimonial</a>
-                                <a href="/404" class="dropdown-item">404 Page</a>
+                               
                             </div>
                         </div>
                         <a href="contact" class="nav-item nav-link">Contact</a>
@@ -69,7 +68,7 @@
                     <div class="d-none d-xl-flex me-3">
                         <div class="d-flex flex-column pe-3 border-end border-primary">
                             <span class="text-body">Call Us On</span>
-                            <a href="tel:+4733378901"><span class="text-primary">Tele: + 251 939 063 697</span></a>
+                            <a href="tel:+4733378901"><span class="text-primary">Tele: +251925235745</span></a>
                         </div>
                     </div>
                     <button class="btn btn-primary btn-md-square d-flex flex-shrink-0 mb-3 mb-lg-0 rounded-circle me-3"
@@ -87,7 +86,7 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+                            <img src="img/water.jpg" class="img-fluid w-100" alt="Image">
                             <div class="carousel-caption-1">
                                 <div class="carousel-caption-1-content" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4 fadeInLeft animated"
@@ -109,7 +108,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/carousel-2.jpg" class="img-fluid w-100" alt="Image">
+                            <img src="img/itwu2.jpeg" class="img-fluid w-100" alt="Image">
                             <div class="carousel-caption-2">
                                 <div class="carousel-caption-2-content" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4 fadeInRight animated"
@@ -173,41 +172,49 @@
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-uppercase text-primary">Our Feature</h4>
-                    <h1 class="display-3 text-capitalize mb-3">A Trusted Name In Bottled Water Industry</h1>
+                    <h1 class="display-3 text-capitalize mb-3">Pioneering Reliable Water Solutions for Itang Town</h1>
                 </div>
                 <div class="row g-4">
                     <div class=" col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="feature-item p-4">
                             <div class="feature-icon mb-3"><i class="fas fa-hand-holding-water text-white fa-3x"></i></div>
-                            <a href="#" class="h4 mb-3">Quality Check</a>
-                            <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repellat deleniti necessitatibus</p>
+                            <a href="#" class="h4 mb-3">Ensuring Excellence in Every Drop</a>
+                            <p class="mb-3">At Itang Town Water Utility, we are committed to delivering the highest quality
+                                water to our community. </p>
                             <a href="#" class="btn text-secondary">Read More <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="feature-item p-4">
                             <div class="feature-icon mb-3"><i class="fas fa-filter text-white fa-3x"></i></div>
-                            <a href="#" class="h4 mb-3">5 Steps Filtration</a>
-                            <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repellat deleniti necessitatibus</p>
+                            <a href="#" class="h4 mb-3">Advanced Filtration System</a>
+                            <p class="mb-3">Our state-of-the-art filtration system ensures that every drop of water meets the
+                                highest
+                                standards of purity and safety, providing you with clean and reliable water.</p>
                             <a href="#" class="btn text-secondary">Read More <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="feature-item p-4">
                             <div class="feature-icon mb-3"><i class="fas fa-recycle text-white fa-3x"></i></div>
-                            <a href="#" class="h4 mb-3">Composition</a>
-                            <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repellat deleniti necessitatibus</p>
+                            <a href="#" class="h4 mb-3">Sustainable Practices</a>
+                            <p class="mb-3">We prioritize sustainability in our operations, employing eco-friendly practices to
+                                conserve
+                                resources and reduce environmental impact.</p>
                             <a href="#" class="btn text-secondary">Read More <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="feature-item p-4">
                             <div class="feature-icon mb-3"><i class="fas fa-microscope text-white fa-3x"></i></div>
-                            <a href="#" class="h4 mb-3">Lab Control</a>
-                            <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repellat deleniti necessitatibus</p>
+                            <a href="#" class="h4 mb-3">Comprehensive Quality Checks</a>
+                            <p class="mb-3">We conduct thorough lab tests and quality checks to ensure that our water is
+                                consistently safe
+                                and meets all health standards.</p>
                             <a href="#" class="btn text-secondary">Read More <i class="fa fa-angle-right"></i></a>
                         </div>
                     </div>
+        
                 </div>
             </div>
         </div>
@@ -292,8 +299,8 @@
                             <a href="#"><i class="fa fa-map-marker-alt me-2"></i> Itang, Gambella, Ethiopia</a>
                             <a href="mailto:info@example.com"><i class="fas fa-envelope me-2"></i> info@itwu.com</a>
                             <a href="mailto:info@example.com"><i class="fas fa-envelope me-2"></i> nhialpal@gmail.com</a>
-                            <a href="tel:+012 345 67890"><i class="fas fa-phone me-2"></i> +251 345 67890</a>
-                            <a href="tel:+012 345 67890" class="mb-3"><i class="fas fa-print me-2"></i> +251 345 67890</a>
+                            <a href="tel:+012 345 67890"><i class="fas fa-phone me-2"></i> +251925235745</a>
+                            <a href="tel:+012 345 67890" class="mb-3"><i class="fas fa-print me-2"></i> + 251 939 063 697</a>
                         </div>
                     </div>
                 </div>
