--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,18 +58,17 @@
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
                                 <a href="/feature" class="dropdown-item">Our Feature</a>
-                                <a href="/product" class="dropdown-item">Our Product</a>
                                 <a href="/team" class="dropdown-item">Our Team</a>
                                 <a href="/testimonial" class="dropdown-item">Testimonial</a>
-                                <a href="/404" class="dropdown-item">404 Page</a>
+                               
                             </div>
                         </div>
-                        <a href="contact" class="nav-item nav-link">Contact</a>
+                        <a href="/contact" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-none d-xl-flex me-3">
                         <div class="d-flex flex-column pe-3 border-end border-primary">
                             <span class="text-body">Call Us On</span>
-                            <a href="tel:+4733378901"><span class="text-primary">Tele: + 251 939 063 697</span></a>
+                            <a href="tel:+4733378901"><span class="text-primary">Tele: +251925235745</span></a>
                         </div>
                     </div>
                     <button class="btn btn-primary btn-md-square d-flex flex-shrink-0 mb-3 mb-lg-0 rounded-circle me-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
@@ -86,7 +85,7 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+                            <img src="img/water.jpg" class="img-fluid w-100" alt="Image">
                             <div class="carousel-caption-1">
                                 <div class="carousel-caption-1-content" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4 fadeInLeft animated" data-animation="fadeInLeft" data-delay="1s" style="animation-delay: 1s;" style="letter-spacing: 3px;">ITWU</h4>
@@ -100,7 +99,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/carousel-2.jpg" class="img-fluid w-100" alt="Image">
+                            <img src="img/itwu2.jpeg" class="img-fluid w-100" alt="Image">
                             <div class="carousel-caption-2">
                                 <div class="carousel-caption-2-content" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4 fadeInRight animated" data-animation="fadeInRight" data-delay="1s" style="animation-delay: 1s;" style="letter-spacing: 3px;">ITWU</h4>
@@ -203,7 +202,7 @@
                 <div class="row g-5">
                     <div class="col-xl-6 wow fadeInLeft" data-wow-delay="0.2s">
                         <div class="about-img rounded h-100">
-                            <img src="img/solar.jpeg" class="img-fluid rounded h-100 w-100" style="object-fit: cover;" alt="">
+                            <img src="img/nhail.jpg" class="img-fluid rounded h-100 w-100" style="object-fit: cover;" alt="">
                             <div class="about-exp"><span>8 Years Experiance</span></div>
                         </div>
                     </div>
@@ -312,116 +311,116 @@
         </div>
         <!-- Fact Counter -->
 
-        <!-- Service Start -->
-        <div class="container-fluid service bg-light overflow-hidden py-5">
-            <div class="container py-5">
-                <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <h4 class="text-uppercase text-primary">Our Services</h4>
-                    <h1 class="display-3 text-capitalize mb-3">Protect Your Family with Reliable Water Solutions</h1>
+    <!-- Service Start -->
+    <div class="container-fluid service bg-light overflow-hidden py-5">
+        <div class="container py-5">
+            <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
+                <h4 class="text-uppercase text-primary">Our Services</h4>
+                <h1 class="display-3 text-capitalize mb-3">We Provide Access to Water for Both Host Communities and
+                    Thousands of Refugees in Gambella</h1>
+            </div>
+            <div class="row gx-0 gy-4 align-items-center">
+                <div class="col-lg-6 col-xl-4 wow fadeInLeft" data-wow-delay="0.2s">
+                    <div class="service-item rounded p-4 mb-4">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="d-flex">
+                                    <div class="service-content text-end">
+                                        <a href="#" class="h4 d-inline-block mb-3">Residential Water Supply</a>
+                                        <p class="mb-0">We provide clean and safe water to households, ensuring reliable
+                                            supply and high quality to meet daily needs.</p>
+                                    </div>
+                                    <div class="ps-4">
+                                        <div class="service-btn"><i class="fas fa-home text-white fa-2x"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-item rounded p-4 mb-4">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="d-flex">
+                                    <div class="service-content text-end">
+                                        <a href="#" class="h4 d-inline-block mb-3">Commercial Water Services</a>
+                                        <p class="mb-0">Our commercial water solutions cater to businesses and industries,
+                                            providing consistent and quality water supply for various operations.</p>
+                                    </div>
+                                    <div class="ps-4">
+                                        <div class="service-btn"><i class="fas fa-building text-white fa-2x"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-item rounded p-4 mb-0">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="d-flex">
+                                    <div class="service-content text-end">
+                                        <a href="#" class="h4 d-inline-block mb-3">Advanced Filtration Plants</a>
+                                        <p class="mb-0">We operate state-of-the-art filtration plants to ensure the highest
+                                            water quality, using advanced technologies to purify and enhance water safety.
+                                        </p>
+                                    </div>
+                                    <div class="ps-4">
+                                        <div class="service-btn"><i class="fas fa-filter text-white fa-2x"></i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="row gx-0 gy-4 align-items-center">
-                    <div class="col-lg-6 col-xl-4 wow fadeInLeft" data-wow-delay="0.2s">
-                        <div class="service-item rounded p-4 mb-4">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="d-flex">
-                                        <div class="service-content text-end">
-                                            <a href="#" class="h4 d-inline-block mb-3">Residential Water Supply</a>
-                                            <p class="mb-0">We provide clean and safe water to households, ensuring reliable
-                                                supply and high quality to meet daily needs.</p>
-                                        </div>
-                                        <div class="ps-4">
-                                            <div class="service-btn"><i class="fas fa-home text-white fa-2x"></i></div>
-                                        </div>
+                <div class="col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="bg-transparent">
+                        <img src="img/itwu5.jpeg" class="img-fluid w-100" alt="Water Quality">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-4 wow fadeInRight" data-wow-delay="0.2s">
+                    <div class="service-item rounded p-4 mb-4">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="d-flex">
+                                    <div class="pe-4">
+                                        <div class="service-btn"><i class="fas fa-tint text-white fa-2x"></i></div>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="service-item rounded p-4 mb-4">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="d-flex">
-                                        <div class="service-content text-end">
-                                            <a href="#" class="h4 d-inline-block mb-3">Commercial Water Services</a>
-                                            <p class="mb-0">Our commercial water solutions cater to businesses and industries,
-                                                providing consistent and quality water supply for various operations.</p>
-                                        </div>
-                                        <div class="ps-4">
-                                            <div class="service-btn"><i class="fas fa-building text-white fa-2x"></i></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="service-item rounded p-4 mb-0">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="d-flex">
-                                        <div class="service-content text-end">
-                                            <a href="#" class="h4 d-inline-block mb-3">Advanced Filtration Plants</a>
-                                            <p class="mb-0">We operate state-of-the-art filtration plants to ensure the highest
-                                                water quality, using advanced technologies to purify and enhance water safety.
-                                            </p>
-                                        </div>
-                                        <div class="ps-4">
-                                            <div class="service-btn"><i class="fas fa-filter text-white fa-2x"></i></div>
-                                        </div>
+                                    <div class="service-content">
+                                        <a href="#" class="h4 d-inline-block mb-3">Water Softening</a>
+                                        <p class="mb-0">Our water softening services improve water quality by reducing
+                                            hardness, ensuring cleaner and more efficient water for your needs.</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="bg-transparent">
-                            <img src="img/water.png" class="img-fluid w-100" alt="Water Quality">
+                    <div class="service-item rounded p-4 mb-4">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="d-flex">
+                                    <div class="pe-4">
+                                        <div class="service-btn"><i class="fas fa-search text-white fa-2x"></i></div>
+                                    </div>
+                                    <div class="service-content">
+                                        <a href="#" class="h4 d-inline-block mb-3">Market Research</a>
+                                        <p class="mb-0">We conduct thorough market research to understand the needs of our
+                                            customers and to continuously improve our services and water quality.</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xl-4 wow fadeInRight" data-wow-delay="0.2s">
-                        <div class="service-item rounded p-4 mb-4">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="d-flex">
-                                        <div class="pe-4">
-                                            <div class="service-btn"><i class="fas fa-tint text-white fa-2x"></i></div>
-                                        </div>
-                                        <div class="service-content">
-                                            <a href="#" class="h4 d-inline-block mb-3">Water Softening</a>
-                                            <p class="mb-0">Our water softening services improve water quality by reducing
-                                                hardness, ensuring cleaner and more efficient water for your needs.</p>
+                    <div class="service-item rounded p-4 mb-0">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="d-flex">
+                                    <div class="pe-4">
+                                        <div class="service-btn"><i class="fas fa-project-diagram text-white fa-2x"></i>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="service-item rounded p-4 mb-4">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="d-flex">
-                                        <div class="pe-4">
-                                            <div class="service-btn"><i class="fas fa-search text-white fa-2x"></i></div>
-                                        </div>
-                                        <div class="service-content">
-                                            <a href="#" class="h4 d-inline-block mb-3">Market Research</a>
-                                            <p class="mb-0">We conduct thorough market research to understand the needs of our
-                                                customers and to continuously improve our services and water quality.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="service-item rounded p-4 mb-0">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="d-flex">
-                                        <div class="pe-4">
-                                            <div class="service-btn"><i class="fas fa-project-diagram text-white fa-2x"></i>
-                                            </div>
-                                        </div>
-                                        <div class="service-content">
-                                            <a href="#" class="h4 d-inline-block mb-3">Project Planning</a>
-                                            <p class="mb-0">Our expert team provides comprehensive project planning services to
-                                                ensure successful implementation of water projects and infrastructure.</p>
-                                        </div>
+                                    <div class="service-content">
+                                        <a href="#" class="h4 d-inline-block mb-3">Project Planning</a>
+                                        <p class="mb-0">Our expert team provides comprehensive project planning services to
+                                            ensure successful implementation of water projects and infrastructure.</p>
                                     </div>
                                 </div>
                             </div>
@@ -430,7 +429,9 @@
                 </div>
             </div>
         </div>
-        <!-- Service End -->
+    </div>
+    <!-- Service End -->
+
 
         <!-- Blog Start -->
         <div class="container-fluid blog pb-5">
@@ -743,8 +744,8 @@
                             <a href="#"><i class="fa fa-map-marker-alt me-2"></i> Itang, Gambella, Ethiopia</a>
                             <a href="mailto:info@example.com"><i class="fas fa-envelope me-2"></i> info@itwu.com</a>
                             <a href="mailto:info@example.com"><i class="fas fa-envelope me-2"></i> nhialpal@gmail.com</a>
-                            <a href="tel:+012 345 67890"><i class="fas fa-phone me-2"></i> +251 345 67890</a>
-                            <a href="tel:+012 345 67890" class="mb-3"><i class="fas fa-print me-2"></i> +251 345 67890</a>
+                            <a href="tel:+012 345 67890"><i class="fas fa-phone me-2"></i> +251925235745</a>
+                            <a href="tel:+012 345 67890" class="mb-3"><i class="fas fa-print me-2"></i> +251939063697</a>
                         </div>
                     </div>
                 </div>
