--- a/views/team.ejs
+++ b/views/team.ejs
@@ -58,10 +58,9 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                         <div class="dropdown-menu m-0">
                             <a href="/feature" class="dropdown-item">Our Feature</a>
-                            <a href="/product" class="dropdown-item">Our Product</a>
                             <a href="/team" class="dropdown-item">Our Team</a>
                             <a href="/testimonial" class="dropdown-item">Testimonial</a>
-                            <a href="/404" class="dropdown-item">404 Page</a>
+                           
                         </div>
                     </div>
                     <a href="contact" class="nav-item nav-link">Contact</a>
@@ -69,7 +68,7 @@
                 <div class="d-none d-xl-flex me-3">
                     <div class="d-flex flex-column pe-3 border-end border-primary">
                         <span class="text-body">Call Us On</span>
-                        <a href="tel:+4733378901"><span class="text-primary">Tele: + 251 939 063 697</span></a>
+                        <a href="tel:+4733378901"><span class="text-primary">Tele: +251925235745</span></a>
                     </div>
                 </div>
                 <button class="btn btn-primary btn-md-square d-flex flex-shrink-0 mb-3 mb-lg-0 rounded-circle me-3"
@@ -87,7 +86,7 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
+                        <img src="img/water.jpg" class="img-fluid w-100" alt="Image">
                         <div class="carousel-caption-1">
                             <div class="carousel-caption-1-content" style="max-width: 900px;">
                                 <h4 class="text-white text-uppercase fw-bold mb-4 fadeInLeft animated"
@@ -109,7 +108,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="img/carousel-2.jpg" class="img-fluid w-100" alt="Image">
+                        <img src="img/itwu2.jpeg" class="img-fluid w-100" alt="Image">
                         <div class="carousel-caption-2">
                             <div class="carousel-caption-2-content" style="max-width: 900px;">
                                 <h4 class="text-white text-uppercase fw-bold mb-4 fadeInRight animated"
@@ -169,31 +168,37 @@
         <!-- Modal Search End -->
 
         <!-- Team Start -->
-        <div class="container-fluid team py-5">
-            <div class="container py-5">
+        <div class="container-fluid team pb-5">
+            <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-uppercase text-primary">Our Team</h4>
-                    <h1 class="display-3 text-capitalize mb-3">What is Really seo & How Can I Use It?</h1>
+                    <h1 class="display-3 text-capitalize mb-3">Meet the Experts Behind Itang Town Water Utility</h1>
                 </div>
+        
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item p-4">
                             <div class="team-inner rounded">
                                 <div class="team-img">
-                                    <img src="img/team-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                    <img src="img/gm.jpg" class="img-fluid rounded-top w-100" alt="Image">
                                     <div class="team-share">
-                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i class="fas fa-share-alt"></i></a>
+                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i
+                                                class="fas fa-share-alt"></i></a>
                                     </div>
                                     <div class="team-icon rounded-pill py-2 px-2">
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i
+                                                class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                                 <div class="bg-light rounded-bottom text-center py-4">
-                                    <h4 class="mb-3">Hard Branots</h4>
-                                    <p class="mb-0">CEO & Founder</p>
+                                    <h4 class="mb-3">Nhial Pal Bie</h4>
+                                    <p class="mb-0">Project General Manager</p>
                                 </div>
                             </div>
                         </div>
@@ -202,20 +207,25 @@
                         <div class="team-item p-4">
                             <div class="team-inner rounded">
                                 <div class="team-img">
-                                    <img src="img/team-2.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                    <img src="img/logo.jpg" class="img-fluid rounded-top w-100" alt="Image">
                                     <div class="team-share">
-                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i class="fas fa-share-alt"></i></a>
+                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i
+                                                class="fas fa-share-alt"></i></a>
                                     </div>
                                     <div class="team-icon rounded-pill py-2 px-2">
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i
+                                                class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                                 <div class="bg-light rounded-bottom text-center py-4">
-                                    <h4 class="mb-3">Hard Branots</h4>
-                                    <p class="mb-0">CEO & Founder</p>
+                                    <h4 class="mb-3">Ruot Jang</h4>
+                                    <p class="mb-0">Senior HR Offer</p>
                                 </div>
                             </div>
                         </div>
@@ -224,20 +234,25 @@
                         <div class="team-item p-4">
                             <div class="team-inner rounded">
                                 <div class="team-img">
-                                    <img src="img/team-3.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                    <img src="img/op.jpg" class="img-fluid rounded-top w-100" alt="Image">
                                     <div class="team-share">
-                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i class="fas fa-share-alt"></i></a>
+                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i
+                                                class="fas fa-share-alt"></i></a>
                                     </div>
                                     <div class="team-icon rounded-pill py-2 px-2">
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i
+                                                class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                                 <div class="bg-light rounded-bottom text-center py-4">
-                                    <h4 class="mb-3">Hard Branots</h4>
-                                    <p class="mb-0">CEO & Founder</p>
+                                    <h4 class="mb-3">Koat Jing</h4>
+                                    <p class="mb-0">Operation & Techical Head</p>
                                 </div>
                             </div>
                         </div>
@@ -246,20 +261,25 @@
                         <div class="team-item p-4">
                             <div class="team-inner rounded">
                                 <div class="team-img">
-                                    <img src="img/team-4.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                                    <img src="img/tesloach.jpg" class="img-fluid rounded-top w-100" alt="Image">
                                     <div class="team-share">
-                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i class="fas fa-share-alt"></i></a>
+                                        <a class="btn btn-secondary btn-md-square rounded-pill text-white mx-1" href=""><i
+                                                class="fas fa-share-alt"></i></a>
                                     </div>
                                     <div class="team-icon rounded-pill py-2 px-2">
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill mx-1" href=""><i
+                                                class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-linkedin-in"></i></a>
+                                        <a class="btn btn-secondary btn-sm-square rounded-pill me-1" href=""><i
+                                                class="fab fa-instagram"></i></a>
                                     </div>
                                 </div>
                                 <div class="bg-light rounded-bottom text-center py-4">
-                                    <h4 class="mb-3">Hard Branots</h4>
-                                    <p class="mb-0">CEO & Founder</p>
+                                    <h4 class="mb-3">Tesloach Ker</h4>
+                                    <p class="mb-0">IT Department</p>
                                 </div>
                             </div>
                         </div>
